--- a/css/home.css
+++ b/css/home.css
@@ -101,7 +101,8 @@
 
 .div4, .div5, .div6, .div7, .div8{
     border-radius: 5px;
-    width: 595px;   
+    width: 595px;
+    padding: 10px;   
 }
 
 .conteudo{
